--- a/deployment-services.yaml
+++ b/deployment-services.yaml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: demo-app
-  labels:
-    app: demo-app
+  name: appsvc1
 spec:
-  selector:
-    name: demo-app
-  type: LoadBalancer
   ports:
-    - port: 8080
-      nodePort: 32323
+    - port: 80
+      protocol: TCP
+      targetPort: 80
+  selector:
+    app: demo-app
