--- a/deployment-services.yaml
+++ b/deployment-services.yaml
@@ -6,6 +6,7 @@ spec:
   ports:
     - port: 80
       protocol: TCP
-      targetPort: 80
+      targetPort: 8080
   selector:
     app: demo-app
+  type: NodePort
