--- a/nginx-ingress-controller-config-map.yaml
+++ b/nginx-ingress-controller-config-map.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-ingress-controller-conf
+  namespace: ingress
   labels:
     app: nginx-ingress-lb
 data:
