--- a/nginx-ingress-controller-deployment.yaml
+++ b/nginx-ingress-controller-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: nginx-ingress-controller
+  namespace: ingress
 spec:
   replicas: 1
   revisionHistoryLimit: 3
@@ -30,9 +31,9 @@ spec:
             timeoutSeconds: 5
           args:
             - /nginx-ingress-controller
-            #- --default-backend-service=\$(POD_NAMESPACE)/default-backend
+            - --default-backend-service=\$(POD_NAMESPACE)/default-backend
             - --configmap=\$(POD_NAMESPACE)/nginx-ingress-controller-conf
-            #- --v=2
+            - --v=2
           env:
             - name: POD_NAME
               valueFrom:
